--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,10 @@
   },
   "author": "[akashsairaja@gmail.com]",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:akashsairaja/todo-application.git"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
