--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,10 @@
 {
   "name": "todo_project",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "mdi-react": "^6.7.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "react": "^16.9.0",
@@ -19,15 +18,14 @@
     "react-select": "^3.0.8",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuidv4": "^6.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
-  "author": "[akashsairaja@gmail.com]",
+  "author": "akashsairaja@gmail.com",
   "license": "ISC",
   "repository": {
     "type": "git",
